--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,50 +1,49 @@
 {
     "name": "Canopy",
-    "short_name": "",
-    "start_url": "/index.html",
+    "start_url": "/public/index.html",
     "display": "standalone",
-    "background_color": "#FFE9D2",
-    "theme_color": "#FFE1C4",
+    "background_color": "#00838f",
+    "theme_color": "#4dd0e1",
     "orientation": "portrait-primary",
     "short_name": "canopy",
     "icons": [
       {
-        "src": "/img/icons/icon-72x72.png",
+        "src": "/public/img/icons/icon-72x72.png",
         "type": "image/png",
         "sizes": "72x72"
       },
       {
-        "src": "/img/icons/icon-96x96.png",
+        "src": "/public/img/icons/icon-100x100.png",
         "type": "image/png",
-        "sizes": "96x96"
+        "sizes": "100x100"
       },
       {
-        "src": "/img/icons/icon-128x128.png",
+        "src": "/public/img/icons/icon-128x128.png",
         "type": "image/png",
         "sizes": "128x128"
       },
       {
-        "src": "/img/icons/icon-144x144.png",
+        "src": "/public/img/icons/icon-144x144.png",
         "type": "image/png",
         "sizes": "144x144"
       },
       {
-        "src": "/img/icons/icon-152x152.png",
+        "src": "/public/img/icons/icon-152x152.png",
         "type": "image/png",
         "sizes": "152x152"
       },
       {
-        "src": "/img/icons/icon-192x192.png",
+        "src": "/public/img/icons/icon-196x196.png",
         "type": "image/png",
-        "sizes": "192x192"
+        "sizes": "196x196"
       },
       {
-        "src": "/img/icons/icon-384x384.png",
+        "src": "/public/img/icons/icon-256x256.png",
         "type": "image/png",
-        "sizes": "384x384"
+        "sizes": "256x256"
       },
       {
-        "src": "/img/icons/icon-512x512.png",
+        "src": "/public/img/icons/icon-512x512.png",
         "type": "image/png",
         "sizes": "512x512"
       }
